[tool.poetry]
name = "fast_api_multistage_build"
version = "1.0.0"
description = "Example app for testing and demonstrating uvicorn-poetry docker image."
authors = ["Max Pfeiffer <max@maxpfeiffer.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.*"
uvicorn = {version = "0.15.0", extras = ["standard"]}
fastapi = "0.70.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
pytest-cov = "3.0.0"
coverage = "6.1.1"
black = "21.10b0"
requests = "2.25.1"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 80
target-version = ['py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
