[tool.poetry]
name = "fast_api_multistage_build"
version = "1.0.0"
description = "Example app for testing and demonstrating uvicorn-poetry docker image."
authors = ["Max Pfeiffer <max@maxpfeiffer.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {version = " 0.24.0.post1", extras = ["standard"]}
fastapi = "0.104.1"
json-log-formatter = "0.5.2"

[tool.poetry.dev-dependencies]
pytest = "7.4.3"
pytest-cov = "4.1.0"
coverage = "7.3.2"
black = "23.11.0"
requests = "2.31.0"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 80
target-version = ['py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
